# task_traker_cli

./: .gitignore  IMPLEMENTATION_GUIDE.md  README.md  pyproject.toml  task_cli.py  tasks.json  test_task_cli.py
.agents/skills/commit-skill/: SKILL.md
