[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "task-tracker"
version = "0.1.0"
description = "A lightweight CLI TODO app for efficient task management"
authors = [{name = "Your Name"}]
requires-python = ">=3.8"
dependencies = []

[project.scripts]
task = "task_cli:main"

[tool.pytest.ini_options]
testpaths = ["test_task_cli.py"]
